# pypto

./: .clang-tidy  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  README.md  README.zh-CN.md  pyproject.toml
.claude/agents/code-review/: AGENT.md
.claude/agents/testing/: AGENT.md
.claude/rules/: pass-doc-ordering.md  python-style.md  worktree-builds.md
.claude/skills/code-review/: SKILL.md
.claude/skills/fix-issue/: SKILL.md
.claude/skills/testing/: SKILL.md
.github/actions/kill-orphaned-tasks/: action.yml
.github/actions/setup-ci-job/: action.yml
.github/actions/setup-npu-device-job/: action.yml
.github/workflows/: ci.yml  daily_ci.yml
docs/: fix_spmd_tuple_return_alias_regression.md
docs/dev/: 00-ir_definition.md  01-ir_hierarchy.md  02-ir_types_examples.md  05-operator_registration.md  06-operator_organization.md  07-ir_parser.md  07-pass_manager.md  07-python_syntax.md  09-ir_parser.md  11-ir_verifier.md
docs/en/dev/: 01-compile-profiling.md  03-runtime-dfx.md  distributed_ops.md  ptoas-op-status.md
docs/en/user/: 00-getting_started.md  01-language_guide.md  02-operation_reference.md
docs/zh-cn/dev/: 01-compile-profiling.md  03-runtime-dfx.md  distributed_ops.md  ptoas-op-status.md
docs/zh-cn/user/: 00-getting_started.md  01-language_guide.md  02-operation_reference.md
examples/ir_builder/: program_builder_example.py
examples/ir_parser/: program_example.py
examples/models/: __init__.py
examples/utils/: phase_fence_dep_compression.py
include/pypto/codegen/: codegen_base.h
include/pypto/core/: dtype.h
include/pypto/ir/: builder.h  comm.h  core.h  expr.h  function.h  op_registry.h  program.h  scalar_expr.h  stmt.h  tile_view_semantics.h  type.h  type_inference.h
python/bindings/: CMakeLists.txt  bindings.cpp  module.h
python/bindings/modules/: arith.cpp  backend.cpp  core.cpp  ir.cpp  ir_builder.cpp  pass.cpp  passes.cpp
python/pybind/modules/: ir.cpp
python/pypto/arith/: __init__.py
python/pypto/backend/: _ptoas_preprocess.py  pto_backend.py
python/pypto/debug/: torch_codegen.py
python/pypto/ir/: __init__.py  builder.py  compile.py  compiled_program.py  distributed_compiled_program.py  operators.py  pass_manager.py  printer.py
python/pypto/jit/: cache.py  decorator.py  specializer.py
python/pypto/language/: __init__.py  dsl_api.py  scope.py  tensor.py  tile.py
python/pypto/pypto_core/: __init__.pyi  arith.pyi  backend.pyi  ir.pyi  passes.pyi
python/pypto/runtime/: bench.py  device_runner.py  device_tensor.py  distributed_runner.py  env_manager.py  execute_artifact.py  runner.py  task_interface.py
reference/pto-isa/: dynamic_softmax_module.pto  llama7b_layer.pto
src/backend/common/: backend.cpp  pto_ops_common.cpp  pto_ops_crosscore.cpp  pto_ops_datamove.cpp  pto_ops_distributed.cpp  pto_ops_elementwise.cpp  pto_ops_internal.h  pto_ops_memory.cpp  pto_ops_shared.cpp
src/codegen/: array_op_codegen.cpp  codegen_preconditions.cpp  tensor_op_codegen.cpp
src/codegen/cce/: cce_codegen.cpp
src/codegen/distributed/: distributed_codegen.cpp  distributed_op_registry.cpp  distributed_ops_codegen.cpp  distributed_scalar_expr_codegen.cpp
src/codegen/orchestration/: orchestration_analysis.cpp  orchestration_codegen.cpp
src/codegen/pto/: pto_codegen.cpp  pto_control_flow_codegen.cpp
src/ir/: builder.cpp  type.cpp
src/ir/arith/: canonical_simplify.cpp  canonical_simplify.h  int_set.cpp  modular_set.cpp  rewrite_simplify.h
src/ir/op/: type_inference.cpp
src/ir/reporter/: memory_report_generator.cpp
src/ir/serialization/: deserializer.cpp  serializer.cpp  type_deserializers.cpp
src/ir/transform/: mutator.cpp  printer.cpp  python_printer.cpp  visitor.cpp
src/ir/transforms/: allocate_memory_addr_pass.cpp  auto_derive_task_dependencies_pass.cpp  auto_tile_matmul_l0_pass.cpp  canonicalize_io_order_pass.cpp  canonicalize_tile_slice_pass.cpp  classify_iter_arg_carry_pass.cpp  convert_tensor_to_block_ops_pass.cpp  convert_tensor_to_tile_ops_pass.cpp  convert_to_ssa_pass.cpp  ctrl_flow_transform_pass.cpp  derive_call_directions_pass.cpp  expand_manual_phase_fence_pass.cpp  expand_mixed_kernel_pass.cpp  flatten_call_expr_pass.cpp  flatten_tile_nd_to_2d_pass.cpp  fuse_create_assemble_to_slice_pass.cpp  infer_tile_memory_space_pass.cpp  init_memref.cpp  inject_gm_pipe_buffer_pass.cpp  inline_functions_pass.cpp  insert_sync_pass.cpp  interchange_chunk_loops_pass.cpp  ir_property.cpp  lower_auto_vector_split_pass.cpp  lower_composite_ops_pass.cpp  lower_host_tensor_collectives_pass.cpp  lower_pipeline_loops_pass.cpp  materialize_comm_domain_scopes_pass.cpp  materialize_tensor_strides_pass.cpp  memory_reuse_pass.cpp  mutator.cpp  normalize_return_order_pass.cpp  op_conversion_registry.cpp  optimize_orch_tensors_pass.cpp  outline_cluster_scopes_pass.cpp  outline_hierarchy_scopes_pass.cpp  outline_incore_scopes_pass.cpp  pass_context.cpp  python_printer.cpp  resolve_backend_op_layouts_pass.cpp  (+10 more)
src/ir/verifier/: perf_hint_tile_innermost_dim.cpp  property_verifier_registry.cpp  verify_aiv_split.cpp  verify_call_directions.cpp  verify_hard_syncall_occupancy.cpp  verify_inout_use.cpp  verify_manual_deps_on_submit_only.cpp  verify_no_nested_incore.cpp  verify_pipeline_resolved.cpp  verify_return_params_explicit.cpp  verify_ssa_pass.cpp  warning_unused_var.cpp
tests/lint/: check_docs_en_zh_parity.py  clang_tidy.py
tests/st/: conftest.py
tests/st/distributed/: test_l3_ep_dispatch_combine.py  test_l3_gemm.py  test_l3_get.py  test_l3_host_tensor_all_to_all.py  test_l3_host_tensor_allgather.py  test_l3_host_tensor_allreduce.py  test_l3_host_tensor_barrier.py  test_l3_host_tensor_broadcast.py  test_l3_host_tensor_reduce_scatter.py  test_l3_manual.py  test_l3_multi_group.py  test_l3_notify_wait.py  test_l3_put.py  test_l3_remote_store.py  test_l3_remote_store_window_raw.py  test_l3_stacked_device_tensor.py  test_l3_tensor_allreduce_intrinsic.py  test_l3_window_slice_incore.py
tests/st/runtime/: test_at_name_hint.py  test_ci.py  test_cross_core.py  test_perf_swimlane.py  (+1 more)
toolchain/: versions.env
(+383 files in other folders)
