# Copyright (c) PyPTO Contributors.
# This program is free software, you can redistribute it and/or modify it under the terms and conditions of
# CANN Open Software License Agreement Version 2.0 (the "License").
# Please refer to the License for details. You may not use this file except in compliance with the License.
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
# INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
# See LICENSE in the root of the software repository for the full text of the License.
# -----------------------------------------------------------------------------------------------------------

cmake_minimum_required(VERSION 3.15)

# Support both scikit-build and native CMake builds
if(DEFINED SKBUILD_PROJECT_NAME)
    # Building with scikit-build-core
    project(${SKBUILD_PROJECT_NAME} VERSION ${SKBUILD_PROJECT_VERSION})
    set(SKBUILD_MODE ON)
else()
    # Building with native CMake
    file(STRINGS "${CMAKE_SOURCE_DIR}/pyproject.toml" _version_line LIMIT_COUNT 1 REGEX "^version ?= ?\"")

    if(_version_line)
        string(REGEX REPLACE "^version ?= ?\"([^\"]*)\".*" "\\1" _pypto_version "${_version_line}")
        project(pypto VERSION ${_pypto_version})
    else()
        message(FATAL_ERROR "Failed to parse version from pyproject.toml")
    endif()

    set(SKBUILD_MODE OFF)
endif()

set(LIBRARY_NAME "${PROJECT_NAME}_core")

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Enable ccache if available
find_program(CCACHE_PROGRAM ccache)

if(CCACHE_PROGRAM)
    message(STATUS "Found ccache: ${CCACHE_PROGRAM}")
    set(CMAKE_CXX_COMPILER_LAUNCHER "${CCACHE_PROGRAM}")
    set(CMAKE_C_COMPILER_LAUNCHER "${CCACHE_PROGRAM}")
else()
    message(STATUS "ccache not found")
endif()

# Set default build type if not specified
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "RelWithDebInfo" CACHE STRING "Build type (Debug or Release)" FORCE)
endif()

# Compiler flags
set(CMAKE_CXX_FLAGS_DEBUG "-g -O0")
set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-g -O2 -DNDEBUG")

# Fix debug info paths when building in a temp directory (e.g., pip install)
# This remaps paths in DWARF debug info so backtraces show clean relative paths
if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
    # Remap source directory to "." so absolute source paths become relative
    add_compile_options(-fdebug-prefix-map=${CMAKE_SOURCE_DIR}=.)
endif()

# Find Python and nanobind
find_package(Python COMPONENTS Interpreter Development REQUIRED)
find_package(nanobind CONFIG REQUIRED)

# Include directories
include_directories(${CMAKE_SOURCE_DIR}/include)
include_directories(${CMAKE_SOURCE_DIR})

# External dependencies
include(${CMAKE_SOURCE_DIR}/cmake/libbacktrace.cmake)
include(${CMAKE_SOURCE_DIR}/cmake/msgpack.cmake)

# PyPTO core sources
set(PYPTO_SOURCES
    # Core
    src/core/backtrace.cpp
    src/core/error.cpp

    # IR - Core
    src/ir/builder.cpp
    src/ir/core.cpp
    src/ir/expr.cpp
    src/ir/function.cpp
    src/ir/memref.cpp
    src/ir/op_registry.cpp
    src/ir/program.cpp
    src/ir/stmt.cpp
    src/ir/type.cpp

    # IR - Operators
    src/ir/op/tile_ops/batch_matmul.cpp
    src/ir/op/tile_ops/broadcast.cpp
    src/ir/op/tile_ops/elementwise.cpp
    src/ir/op/tile_ops/matmul.cpp
    src/ir/op/tile_ops/memory.cpp
    src/ir/op/tile_ops/reduction.cpp
    src/ir/op/tile_ops/transform.cpp
    src/ir/op/tile_ops/unary.cpp
    src/ir/op/tile_ops/cross_core.cpp
    src/ir/op/tile_ops/sort.cpp
    src/ir/op/tile_ops/gather.cpp
    src/ir/op/tile_ops/paged_gather.cpp
    src/ir/op/tile_ops/scatter.cpp
    src/ir/op/sync_ops/sync.cpp
    src/ir/op/sync_ops/cross_core.cpp
    src/ir/op/sync_ops/task.cpp
    src/ir/op/distributed/memory.cpp
    src/ir/op/distributed/world_size.cpp
    src/ir/op/distributed/remote_load.cpp
    src/ir/op/distributed/remote_store.cpp
    src/ir/op/distributed/collective.cpp
    src/ir/op/distributed/get.cpp
    src/ir/op/distributed/put.cpp
    src/ir/op/distributed/get_comm_ctx.cpp
    src/ir/op/distributed/system.cpp
    src/ir/op/distributed/allreduce.cpp
    src/ir/op/distributed/intrinsics.cpp
    src/ir/op/tensor_ops/broadcast.cpp
    src/ir/op/tensor_ops/elementwise.cpp
    src/ir/op/tensor_ops/matmul.cpp
    src/ir/op/tensor_ops/memory.cpp
    src/ir/op/tensor_ops/scatter_update.cpp
    src/ir/op/tensor_ops/reduction.cpp
    src/ir/op/tensor_ops/sort.cpp
    src/ir/op/tensor_ops/gather.cpp
    src/ir/op/tensor_ops/paged_gather.cpp
    src/ir/op/tensor_ops/scatter.cpp
    src/ir/op/tensor_ops/transform.cpp
    src/ir/op/tensor_ops/unary.cpp
    src/ir/op/array_ops/memory.cpp
    src/ir/op/testing.cpp
    src/ir/op/type_inference.cpp

    # IR - Arith
    src/ir/arith/analyzer.cpp
    src/ir/arith/const_int_bound.cpp
    src/ir/arith/modular_set.cpp
    src/ir/arith/rewrite_simplify.cpp
    src/ir/arith/canonical_simplify.cpp
    src/ir/arith/ir_mutator_with_analyzer.cpp
    src/ir/arith/transitive_comparison_analyzer.cpp
    src/ir/arith/int_set.cpp

    # IR - Transforms
    src/ir/transforms/allocate_memory_addr_pass.cpp
    src/ir/transforms/canonicalize_tile_slice_pass.cpp
    src/ir/transforms/fold_no_op_reshape_pass.cpp
    src/ir/transforms/stamp_tfree_split_pass.cpp
    src/ir/transforms/materialize_runtime_scopes_pass.cpp
    src/ir/transforms/fuse_create_assemble_to_slice_pass.cpp
    src/ir/transforms/memory_reuse_pass.cpp
    src/ir/transforms/normalize_return_order_pass.cpp
    src/ir/transforms/convert_tensor_to_tile_ops_pass.cpp
    src/ir/transforms/materialize_comm_domain_scopes_pass.cpp
    src/ir/transforms/lower_host_tensor_collectives_pass.cpp
    src/ir/transforms/optimize_orch_tensors_pass.cpp
    src/ir/transforms/derive_call_directions_pass.cpp
    src/ir/transforms/auto_derive_task_dependencies_pass.cpp
    src/ir/transforms/expand_manual_phase_fence_pass.cpp
    src/ir/transforms/convert_to_ssa_pass.cpp
    src/ir/transforms/ctrl_flow_transform_pass.cpp
    src/ir/transforms/flatten_call_expr_pass.cpp
    src/ir/transforms/infer_tile_memory_space_pass.cpp
    src/ir/transforms/inline_functions_pass.cpp
    src/ir/transforms/init_memref.cpp
    src/ir/transforms/lower_composite_ops_pass.cpp
    src/ir/transforms/materialize_tensor_strides_pass.cpp
    src/ir/transforms/ir_property.cpp
    src/ir/transforms/mutator.cpp
    src/ir/transforms/normalize_stmt_structure_pass.cpp
    src/ir/transforms/op_conversion_registry.cpp
    src/ir/transforms/outline_incore_scopes_pass.cpp
    src/ir/transforms/outline_cluster_scopes_pass.cpp
    src/ir/transforms/outline_hierarchy_scopes_pass.cpp
    src/ir/transforms/expand_mixed_kernel_pass.cpp
    src/ir/transforms/lower_auto_vector_split_pass.cpp
    src/ir/transforms/split_vector_kernel_pass.cpp
    src/ir/transforms/auto_tile_matmul_l0_pass.cpp
    src/ir/transforms/flatten_tile_nd_to_2d_pass.cpp
    src/ir/transforms/pass_context.cpp
    src/ir/transforms/passes.cpp
    src/ir/transforms/resolve_backend_op_layouts_pass.cpp
    src/ir/transforms/python_printer.cpp
    src/ir/transforms/simplify_pass.cpp
    src/ir/transforms/inject_gm_pipe_buffer_pass.cpp
    src/ir/transforms/unroll_loops_pass.cpp
    src/ir/transforms/skew_cross_core_pipeline_pass.cpp
    src/ir/transforms/lower_pipeline_loops_pass.cpp
    src/ir/transforms/canonicalize_io_order_pass.cpp
    src/ir/transforms/structural_equal.cpp
    src/ir/transforms/structural_hash.cpp
    src/ir/transforms/utils/core_affinity.cpp
    src/ir/transforms/utils/core_side_ops.cpp
    src/ir/transforms/utils/cross_core_pipe.cpp
    src/ir/transforms/utils/deep_clone_utils.cpp
    src/ir/transforms/utils/dead_code_elimination.cpp
    src/ir/transforms/utils/l0_tile_chooser.cpp
    src/ir/transforms/utils/loop_state_repair.cpp
    src/ir/transforms/utils/tpop_tfree_finalizer.cpp
    src/ir/transforms/utils/normalize_stmt_structure.cpp
    src/ir/transforms/utils/op_predicates.cpp
    src/ir/transforms/utils/parent_stmt_analysis.cpp
    src/ir/transforms/utils/return_lineage_utils.cpp
    src/ir/transforms/utils/split_axis_utils.cpp
    src/ir/transforms/utils/stmt_dependency_analysis.cpp
    src/ir/transforms/utils/transform_utils.cpp
    src/ir/transforms/utils/wrapper_call_utils.cpp
    src/ir/transforms/utils/window_externalization.cpp
    src/ir/transforms/visitor.cpp

    # IR - Reporter
    src/ir/reporter/report.cpp
    src/ir/reporter/memory_report_generator.cpp
    src/ir/reporter/report_generator_registry.cpp

    # IR - Verifier
    src/ir/verifier/verifier.cpp
    src/ir/verifier/property_verifier_registry.cpp
    src/ir/verifier/mixed_kernel_expanded_verifier.cpp
    src/ir/verifier/verify_aiv_split.cpp
    src/ir/verifier/verify_ssa_pass.cpp
    src/ir/verifier/verify_no_nested_call_pass.cpp
    src/ir/verifier/verify_no_nested_incore.cpp
    src/ir/verifier/verify_break_continue_pass.cpp
    src/ir/verifier/verify_inline_functions_eliminated.cpp
    src/ir/verifier/verify_use_after_def.cpp
    src/ir/verifier/type_check_pass.cpp
    src/ir/verifier/verify_structured_ctrl_flow_pass.cpp
    src/ir/verifier/verify_out_param_pass.cpp
    src/ir/verifier/verify_array_not_escaped.cpp
    src/ir/verifier/verify_inout_use.cpp
    src/ir/verifier/verify_return_params_explicit.cpp
    src/ir/verifier/verify_pipeline_loop_valid.cpp
    src/ir/verifier/verify_manual_deps_on_submit_only.cpp
    src/ir/verifier/verify_pipeline_resolved.cpp
    src/ir/verifier/verify_unroll_resolved.cpp
    src/ir/verifier/verify_call_directions.cpp
    src/ir/verifier/verify_tile_type_coherence.cpp
    src/ir/verifier/verify_assign_type_symmetry.cpp
    src/ir/verifier/verify_orchestration_references.cpp
    src/ir/verifier/verify_tensor_view_canonical.cpp
    src/ir/verifier/diagnostic_check_registry.cpp
    src/ir/verifier/warning_unused_var.cpp
    src/ir/verifier/perf_hint_tile_innermost_dim.cpp

    # IR - Serialization
    src/ir/serialization/deserializer.cpp
    src/ir/serialization/serializer.cpp
    src/ir/serialization/type_deserializers.cpp
    src/ir/serialization/type_registry.cpp

    # Codegen
    src/codegen/code_emitter.cpp
    src/codegen/codegen_base.cpp
    src/codegen/orchestration/orchestration_analysis.cpp
    src/codegen/orchestration/orchestration_codegen.cpp
    src/codegen/orchestration_op_registry.cpp
    src/codegen/pto/pto_codegen.cpp
    src/codegen/pto/pto_control_flow_codegen.cpp
    src/codegen/pto/pto_scalar_expr_codegen.cpp
    src/codegen/pto/pto_type_utils.cpp
    src/codegen/distributed/distributed_codegen.cpp
    src/codegen/distributed/distributed_op_registry.cpp
    src/codegen/distributed/distributed_ops_codegen.cpp
    src/codegen/distributed/distributed_scalar_expr_codegen.cpp
    src/codegen/tensor_op_codegen.cpp
    src/codegen/array_op_codegen.cpp

    # Backend
    src/backend/910B/backend_910b.cpp
    src/backend/910B/backend_910b_handler.cpp
    src/backend/910B/backend_910b_ops.cpp
    src/backend/950/backend_950.cpp
    src/backend/950/backend_950_handler.cpp
    src/backend/950/backend_950_ops.cpp
    src/backend/common/backend.cpp
    src/backend/common/backend_config.cpp
    src/backend/common/backend_registry.cpp
    src/backend/common/pto_ops_common.cpp
    src/backend/common/soc.cpp
)

# Include Python bindings
add_subdirectory(python/bindings)
